--- a/src/local_controller/setup.cfg
+++ b/src/local_controller/setup.cfg
@@ -2,3 +2,15 @@
 script_dir=$base/lib/local_controller
 [install]
 install_scripts=$base/lib/local_controller
+[metadata]
+name = local_controller
+version = 0.0.1
+description = Controlador local para el robot
+author = Tu Nombre
+license = MIT
+[options]
+packages = find:
+install_requires =
+    setuptools
+    launch
+    launch_ros
